fix: adding gap between tx pending and icon

--- a/src/styles/_clasess.scss
+++ b/src/styles/_clasess.scss
@@ -117,7 +117,9 @@ body {
 .txt-center {
   text-align: center;
 }
-
+.yellow {
+  color: yellow;        
+}
 .content-explorer {
   width: 100%;
   .content-view-body {
