--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -195,6 +195,8 @@
       .data-field {
         display: flex;
         flex: 5;
+        gap: 5px;
+        align-items: center;
         a {
           color: $white_400;
           &:hover {
@@ -203,6 +205,9 @@
         }
         .field-value {
           word-break: break-all;
+        }
+        .field-icon {
+          height: 16px;
         }
       }
       .items-list {
